@startuml Restaurant uml

class Restaurant{
+name: str
+adress: str
+phone_number: int
+admin: Employee
+cash_register: Cash_Register
+employees: list
+clients: list
+add_employee() 
}

abstract class "Person"{
+name: str
+id: int 
}

class Employee{
+age: int
+salary: float
+job: str  
}

class Client{
+order_status: bool
+bill_status: bool
+create_order()
+client_payment()
} 
	
class Saucer{
+name: str
+ingredients: list
+description: str
+price: float 
}

class Drink{
+name: str
+description: str
+price: float
+quantity: int 
}

class Order{
+order_status: bool
+table: int
+saucers: list 
+drinks: list
}

class Invoice{
+id: int
+client: Client
order: Order  
}

class Kitchen{
+inventary: Inventary
+saucers: list
+orders: list
+create_saucer()
+cook_saucer()
}

class Cash_Register{
+balance: str
+admin: Employee
+id_admin: str
+sales: list
+gen_invoice()
}

class Inventary{
+ingredients: list
+drinks: list
+create_drink()
+add_ingredient()
+add_drink()
+remove_drink()
}

Person -- Client
Person -- Employee
Restaurant -- Client
Restaurant -- Employee
Restaurant -- Kitchen
Restaurant -- Cash_Register
Invoice -- Cash_Register
Kitchen-- Inventary
Kitchen-- Saucer
Saucer -- Order
Drink -- Order
Drink --Inventary

Client -- Invoice
Client -- Order
Order -- Cash_Register
Client -- Cash_Register

@enduml
